yacc.output
Terminals which are not used

   NOTOKEN


Grammar

    0 $accept: start $end

    1 start: command ';'

    2 command: db
    3        | dml
    4        | ddl

    5 db: createdb
    6   | dropdb
    7   | usedb

    8 dml: query
    9    | insert
   10    | delete
   11    | update
   12    | querygroupsum

   13 ddl: createtable
   14    | droptable
   15    | showtables
   16    | desc
   17    | createindex
   18    | dropindex

   19 createdb: T_CREATE T_DATABASE T_STRING

   20 dropdb: T_DROP T_DATABASE T_STRING

   21 usedb: T_USE T_STRING

   22 createtable: T_CREATE T_TABLE T_STRING '(' non_mt_attrtype_list ')'

   23 droptable: T_DROP T_TABLE T_STRING

   24 showtables: T_SHOW T_TABLES

   25 desc: T_DESC T_STRING

   26 createindex: T_CREATE T_INDEX relation '(' relattr ')'

   27 dropindex: T_DROP T_INDEX relation '(' relattr ')'

   28 query: T_SELECT non_mt_select_clause T_FROM non_mt_relation_list opt_where_clause

   29 querygroupsum: T_SELECT non_mt_select_clause T_FROM relation T_GROUP T_BY non_mt_select_clause opt_where_clause

   30 insert: T_INSERT T_INTO T_STRING T_VALUES list_non_mt_value_list

   31 delete: T_DELETE T_FROM T_STRING opt_where_clause

   32 update: T_UPDATE T_STRING T_SET expr_list opt_where_clause

   33 expr_list: expr ',' expr_list
   34          | expr

   35 expr: relattr T_EQ relattr_or_value '+' relattr_or_value
   36     | relattr T_EQ relattr_or_value '-' relattr_or_value
   37     | relattr T_EQ relattr_or_value '*' relattr_or_value
   38     | relattr T_EQ relattr_or_value '/' relattr_or_value
   39     | relattr T_EQ relattr_or_value

   40 list_non_mt_value_list: list_non_mt_value_list ',' '(' non_mt_value_list ')'
   41                       | '(' non_mt_value_list ')'

   42 non_mt_attrtype_list: attrtype ',' non_mt_attrtype_list
   43                     | attrtype

   44 check_list: check T_AND check_list
   45           | check

   46 check: T_STRING T_IN '(' non_mt_value_list ')'

   47 attrtype: T_STRING T_STRING T_NOT T_NULL
   48         | T_STRING T_STRING
   49         | T_STRING T_STRING '(' T_INT ')'
   50         | T_STRING T_STRING '(' T_INT ')' T_NOT T_NULL
   51         | T_STRING T_STRING '(' T_STRING ')'
   52         | T_STRING '(' check_list ')'

   53 non_mt_select_clause: non_mt_relattr_list
   54                     | '*'

   55 non_mt_relattr_list: relattr ',' non_mt_relattr_list
   56                    | relattr

   57 relattr: T_STRING '(' T_STRING ')'
   58        | T_STRING '.' T_STRING
   59        | T_STRING

   60 non_mt_relation_list: relation ',' non_mt_relation_list
   61                     | relation

   62 relation: T_STRING

   63 opt_where_clause: T_WHERE non_mt_cond_list
   64                 | nothing

   65 non_mt_cond_list: condition T_AND non_mt_cond_list
   66                 | condition

   67 condition: relattr op relattr_or_value

   68 relattr_or_value: relattr
   69                 | value

   70 non_mt_value_list: non_mt_value_list ',' value
   71                  | value

   72 value: T_QSTRING
   73      | T_INT
   74      | '-' T_INT
   75      | T_REAL
   76      | T_NULL

   77 op: T_LT
   78   | T_LE
   79   | T_GT
   80   | T_GE
   81   | T_EQ
   82   | T_NE
   83   | T_LIKE
   84   | T_ISNULL

   85 nothing: /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 22 26 27 40 41 46 49 50 51 52 57
')' (41) 22 26 27 40 41 46 49 50 51 52 57
'*' (42) 37 54
'+' (43) 35
',' (44) 33 40 42 55 60 70
'-' (45) 36 74
'.' (46) 58
'/' (47) 38
';' (59) 1
error (256)
T_CREATE (258) 19 22 26
T_DROP (259) 20 23 27
T_USE (260) 21
T_INDEX (261) 26 27
T_DATABASE (262) 19 20
T_SHOW (263) 24
T_TABLES (264) 24
T_DESC (265) 25
T_TABLE (266) 22 23
T_NOT (267) 47 50
T_NULL (268) 47 50 76
T_SET (269) 32
T_AND (270) 44 65
T_SELECT (271) 28 29
T_LIKE (272) 83
T_GROUP (273) 29
T_BY (274) 29
T_FROM (275) 28 29 31
T_WHERE (276) 63
T_INSERT (277) 30
T_UPDATE (278) 32
T_DELETE (279) 31
T_INTO (280) 30
T_VALUES (281) 30
T_EQ (282) 35 36 37 38 39 81
T_LT (283) 77
T_LE (284) 78
T_GT (285) 79
T_GE (286) 80
T_NE (287) 82
T_IN (288) 46
T_ISNULL (289) 84
NOTOKEN (290)
T_INT (291) 49 50 73 74
T_REAL (292) 75
T_STRING (293) 19 20 21 22 23 25 30 31 32 46 47 48 49 50 51 52 57 58
    59 62
T_QSTRING (294) 72


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
start (50)
    on left: 1, on right: 0
command (51)
    on left: 2 3 4, on right: 1
db (52)
    on left: 5 6 7, on right: 2
dml (53)
    on left: 8 9 10 11 12, on right: 3
ddl (54)
    on left: 13 14 15 16 17 18, on right: 4
createdb (55)
    on left: 19, on right: 5
dropdb (56)
    on left: 20, on right: 6
usedb (57)
    on left: 21, on right: 7
createtable (58)
    on left: 22, on right: 13
droptable (59)
    on left: 23, on right: 14
showtables (60)
    on left: 24, on right: 15
desc (61)
    on left: 25, on right: 16
createindex (62)
    on left: 26, on right: 17
dropindex (63)
    on left: 27, on right: 18
query (64)
    on left: 28, on right: 8
querygroupsum (65)
    on left: 29, on right: 12
insert (66)
    on left: 30, on right: 9
delete (67)
    on left: 31, on right: 10
update (68)
    on left: 32, on right: 11
expr_list (69)
    on left: 33 34, on right: 32 33
expr (70)
    on left: 35 36 37 38 39, on right: 33 34
list_non_mt_value_list (71)
    on left: 40 41, on right: 30 40
non_mt_attrtype_list (72)
    on left: 42 43, on right: 22 42
check_list (73)
    on left: 44 45, on right: 44 52
check (74)
    on left: 46, on right: 44 45
attrtype (75)
    on left: 47 48 49 50 51 52, on right: 42 43
non_mt_select_clause (76)
    on left: 53 54, on right: 28 29
non_mt_relattr_list (77)
    on left: 55 56, on right: 53 55
relattr (78)
    on left: 57 58 59, on right: 26 27 35 36 37 38 39 55 56 67 68
non_mt_relation_list (79)
    on left: 60 61, on right: 28 60
relation (80)
    on left: 62, on right: 26 27 29 60 61
opt_where_clause (81)
    on left: 63 64, on right: 28 29 31 32
non_mt_cond_list (82)
    on left: 65 66, on right: 63 65
condition (83)
    on left: 67, on right: 65 66
relattr_or_value (84)
    on left: 68 69, on right: 35 36 37 38 39 67
non_mt_value_list (85)
    on left: 70 71, on right: 40 41 46 70
value (86)
    on left: 72 73 74 75 76, on right: 69 70 71
op (87)
    on left: 77 78 79 80 81 82 83 84, on right: 67
nothing (88)
    on left: 85, on right: 64


state 0

    0 $accept: . start $end

    T_CREATE  shift, and go to state 1
    T_DROP    shift, and go to state 2
    T_USE     shift, and go to state 3
    T_SHOW    shift, and go to state 4
    T_DESC    shift, and go to state 5
    T_SELECT  shift, and go to state 6
    T_INSERT  shift, and go to state 7
    T_UPDATE  shift, and go to state 8
    T_DELETE  shift, and go to state 9

    start          go to state 10
    command        go to state 11
    db             go to state 12
    dml            go to state 13
    ddl            go to state 14
    createdb       go to state 15
    dropdb         go to state 16
    usedb          go to state 17
    createtable    go to state 18
    droptable      go to state 19
    showtables     go to state 20
    desc           go to state 21
    createindex    go to state 22
    dropindex      go to state 23
    query          go to state 24
    querygroupsum  go to state 25
    insert         go to state 26
    delete         go to state 27
    update         go to state 28


state 1

   19 createdb: T_CREATE . T_DATABASE T_STRING
   22 createtable: T_CREATE . T_TABLE T_STRING '(' non_mt_attrtype_list ')'
   26 createindex: T_CREATE . T_INDEX relation '(' relattr ')'

    T_INDEX     shift, and go to state 29
    T_DATABASE  shift, and go to state 30
    T_TABLE     shift, and go to state 31


state 2

   20 dropdb: T_DROP . T_DATABASE T_STRING
   23 droptable: T_DROP . T_TABLE T_STRING
   27 dropindex: T_DROP . T_INDEX relation '(' relattr ')'

    T_INDEX     shift, and go to state 32
    T_DATABASE  shift, and go to state 33
    T_TABLE     shift, and go to state 34


state 3

   21 usedb: T_USE . T_STRING

    T_STRING  shift, and go to state 35


state 4

   24 showtables: T_SHOW . T_TABLES

    T_TABLES  shift, and go to state 36


state 5

   25 desc: T_DESC . T_STRING

    T_STRING  shift, and go to state 37


state 6

   28 query: T_SELECT . non_mt_select_clause T_FROM non_mt_relation_list opt_where_clause
   29 querygroupsum: T_SELECT . non_mt_select_clause T_FROM relation T_GROUP T_BY non_mt_select_clause opt_where_clause

    T_STRING  shift, and go to state 38
    '*'       shift, and go to state 39

    non_mt_select_clause  go to state 40
    non_mt_relattr_list   go to state 41
    relattr               go to state 42


state 7

   30 insert: T_INSERT . T_INTO T_STRING T_VALUES list_non_mt_value_list

    T_INTO  shift, and go to state 43


state 8

   32 update: T_UPDATE . T_STRING T_SET expr_list opt_where_clause

    T_STRING  shift, and go to state 44


state 9

   31 delete: T_DELETE . T_FROM T_STRING opt_where_clause

    T_FROM  shift, and go to state 45


state 10

    0 $accept: start . $end

    $end  shift, and go to state 46


state 11

    1 start: command . ';'

    ';'  shift, and go to state 47


state 12

    2 command: db .

    $default  reduce using rule 2 (command)


state 13

    3 command: dml .

    $default  reduce using rule 3 (command)


state 14

    4 command: ddl .

    $default  reduce using rule 4 (command)


state 15

    5 db: createdb .

    $default  reduce using rule 5 (db)


state 16

    6 db: dropdb .

    $default  reduce using rule 6 (db)


state 17

    7 db: usedb .

    $default  reduce using rule 7 (db)


state 18

   13 ddl: createtable .

    $default  reduce using rule 13 (ddl)


state 19

   14 ddl: droptable .

    $default  reduce using rule 14 (ddl)


state 20

   15 ddl: showtables .

    $default  reduce using rule 15 (ddl)


state 21

   16 ddl: desc .

    $default  reduce using rule 16 (ddl)


state 22

   17 ddl: createindex .

    $default  reduce using rule 17 (ddl)


state 23

   18 ddl: dropindex .

    $default  reduce using rule 18 (ddl)


state 24

    8 dml: query .

    $default  reduce using rule 8 (dml)


state 25

   12 dml: querygroupsum .

    $default  reduce using rule 12 (dml)


state 26

    9 dml: insert .

    $default  reduce using rule 9 (dml)


state 27

   10 dml: delete .

    $default  reduce using rule 10 (dml)


state 28

   11 dml: update .

    $default  reduce using rule 11 (dml)


state 29

   26 createindex: T_CREATE T_INDEX . relation '(' relattr ')'

    T_STRING  shift, and go to state 48

    relation  go to state 49


state 30

   19 createdb: T_CREATE T_DATABASE . T_STRING

    T_STRING  shift, and go to state 50


state 31

   22 createtable: T_CREATE T_TABLE . T_STRING '(' non_mt_attrtype_list ')'

    T_STRING  shift, and go to state 51


state 32

   27 dropindex: T_DROP T_INDEX . relation '(' relattr ')'

    T_STRING  shift, and go to state 48

    relation  go to state 52


state 33

   20 dropdb: T_DROP T_DATABASE . T_STRING

    T_STRING  shift, and go to state 53


state 34

   23 droptable: T_DROP T_TABLE . T_STRING

    T_STRING  shift, and go to state 54


state 35

   21 usedb: T_USE T_STRING .

    $default  reduce using rule 21 (usedb)


state 36

   24 showtables: T_SHOW T_TABLES .

    $default  reduce using rule 24 (showtables)


state 37

   25 desc: T_DESC T_STRING .

    $default  reduce using rule 25 (desc)


state 38

   57 relattr: T_STRING . '(' T_STRING ')'
   58        | T_STRING . '.' T_STRING
   59        | T_STRING .

    '('  shift, and go to state 55
    '.'  shift, and go to state 56

    $default  reduce using rule 59 (relattr)


state 39

   54 non_mt_select_clause: '*' .

    $default  reduce using rule 54 (non_mt_select_clause)


state 40

   28 query: T_SELECT non_mt_select_clause . T_FROM non_mt_relation_list opt_where_clause
   29 querygroupsum: T_SELECT non_mt_select_clause . T_FROM relation T_GROUP T_BY non_mt_select_clause opt_where_clause

    T_FROM  shift, and go to state 57


state 41

   53 non_mt_select_clause: non_mt_relattr_list .

    $default  reduce using rule 53 (non_mt_select_clause)


state 42

   55 non_mt_relattr_list: relattr . ',' non_mt_relattr_list
   56                    | relattr .

    ','  shift, and go to state 58

    $default  reduce using rule 56 (non_mt_relattr_list)


state 43

   30 insert: T_INSERT T_INTO . T_STRING T_VALUES list_non_mt_value_list

    T_STRING  shift, and go to state 59


state 44

   32 update: T_UPDATE T_STRING . T_SET expr_list opt_where_clause

    T_SET  shift, and go to state 60


state 45

   31 delete: T_DELETE T_FROM . T_STRING opt_where_clause

    T_STRING  shift, and go to state 61


state 46

    0 $accept: start $end .

    $default  accept


state 47

    1 start: command ';' .

    $default  reduce using rule 1 (start)


state 48

   62 relation: T_STRING .

    $default  reduce using rule 62 (relation)


state 49

   26 createindex: T_CREATE T_INDEX relation . '(' relattr ')'

    '('  shift, and go to state 62


state 50

   19 createdb: T_CREATE T_DATABASE T_STRING .

    $default  reduce using rule 19 (createdb)


state 51

   22 createtable: T_CREATE T_TABLE T_STRING . '(' non_mt_attrtype_list ')'

    '('  shift, and go to state 63


state 52

   27 dropindex: T_DROP T_INDEX relation . '(' relattr ')'

    '('  shift, and go to state 64


state 53

   20 dropdb: T_DROP T_DATABASE T_STRING .

    $default  reduce using rule 20 (dropdb)


state 54

   23 droptable: T_DROP T_TABLE T_STRING .

    $default  reduce using rule 23 (droptable)


state 55

   57 relattr: T_STRING '(' . T_STRING ')'

    T_STRING  shift, and go to state 65


state 56

   58 relattr: T_STRING '.' . T_STRING

    T_STRING  shift, and go to state 66


state 57

   28 query: T_SELECT non_mt_select_clause T_FROM . non_mt_relation_list opt_where_clause
   29 querygroupsum: T_SELECT non_mt_select_clause T_FROM . relation T_GROUP T_BY non_mt_select_clause opt_where_clause

    T_STRING  shift, and go to state 48

    non_mt_relation_list  go to state 67
    relation              go to state 68


state 58

   55 non_mt_relattr_list: relattr ',' . non_mt_relattr_list

    T_STRING  shift, and go to state 38

    non_mt_relattr_list  go to state 69
    relattr              go to state 42


state 59

   30 insert: T_INSERT T_INTO T_STRING . T_VALUES list_non_mt_value_list

    T_VALUES  shift, and go to state 70


state 60

   32 update: T_UPDATE T_STRING T_SET . expr_list opt_where_clause

    T_STRING  shift, and go to state 38

    expr_list  go to state 71
    expr       go to state 72
    relattr    go to state 73


state 61

   31 delete: T_DELETE T_FROM T_STRING . opt_where_clause

    T_WHERE  shift, and go to state 74

    $default  reduce using rule 85 (nothing)

    opt_where_clause  go to state 75
    nothing           go to state 76


state 62

   26 createindex: T_CREATE T_INDEX relation '(' . relattr ')'

    T_STRING  shift, and go to state 38

    relattr  go to state 77


state 63

   22 createtable: T_CREATE T_TABLE T_STRING '(' . non_mt_attrtype_list ')'

    T_STRING  shift, and go to state 78

    non_mt_attrtype_list  go to state 79
    attrtype              go to state 80


state 64

   27 dropindex: T_DROP T_INDEX relation '(' . relattr ')'

    T_STRING  shift, and go to state 38

    relattr  go to state 81


state 65

   57 relattr: T_STRING '(' T_STRING . ')'

    ')'  shift, and go to state 82


state 66

   58 relattr: T_STRING '.' T_STRING .

    $default  reduce using rule 58 (relattr)


state 67

   28 query: T_SELECT non_mt_select_clause T_FROM non_mt_relation_list . opt_where_clause

    T_WHERE  shift, and go to state 74

    $default  reduce using rule 85 (nothing)

    opt_where_clause  go to state 83
    nothing           go to state 76


state 68

   29 querygroupsum: T_SELECT non_mt_select_clause T_FROM relation . T_GROUP T_BY non_mt_select_clause opt_where_clause
   60 non_mt_relation_list: relation . ',' non_mt_relation_list
   61                     | relation .

    T_GROUP  shift, and go to state 84
    ','      shift, and go to state 85

    $default  reduce using rule 61 (non_mt_relation_list)


state 69

   55 non_mt_relattr_list: relattr ',' non_mt_relattr_list .

    $default  reduce using rule 55 (non_mt_relattr_list)


state 70

   30 insert: T_INSERT T_INTO T_STRING T_VALUES . list_non_mt_value_list

    '('  shift, and go to state 86

    list_non_mt_value_list  go to state 87


state 71

   32 update: T_UPDATE T_STRING T_SET expr_list . opt_where_clause

    T_WHERE  shift, and go to state 74

    $default  reduce using rule 85 (nothing)

    opt_where_clause  go to state 88
    nothing           go to state 76


state 72

   33 expr_list: expr . ',' expr_list
   34          | expr .

    ','  shift, and go to state 89

    $default  reduce using rule 34 (expr_list)


state 73

   35 expr: relattr . T_EQ relattr_or_value '+' relattr_or_value
   36     | relattr . T_EQ relattr_or_value '-' relattr_or_value
   37     | relattr . T_EQ relattr_or_value '*' relattr_or_value
   38     | relattr . T_EQ relattr_or_value '/' relattr_or_value
   39     | relattr . T_EQ relattr_or_value

    T_EQ  shift, and go to state 90


state 74

   63 opt_where_clause: T_WHERE . non_mt_cond_list

    T_STRING  shift, and go to state 38

    relattr           go to state 91
    non_mt_cond_list  go to state 92
    condition         go to state 93


state 75

   31 delete: T_DELETE T_FROM T_STRING opt_where_clause .

    $default  reduce using rule 31 (delete)


state 76

   64 opt_where_clause: nothing .

    $default  reduce using rule 64 (opt_where_clause)


state 77

   26 createindex: T_CREATE T_INDEX relation '(' relattr . ')'

    ')'  shift, and go to state 94


state 78

   47 attrtype: T_STRING . T_STRING T_NOT T_NULL
   48         | T_STRING . T_STRING
   49         | T_STRING . T_STRING '(' T_INT ')'
   50         | T_STRING . T_STRING '(' T_INT ')' T_NOT T_NULL
   51         | T_STRING . T_STRING '(' T_STRING ')'
   52         | T_STRING . '(' check_list ')'

    T_STRING  shift, and go to state 95
    '('       shift, and go to state 96


state 79

   22 createtable: T_CREATE T_TABLE T_STRING '(' non_mt_attrtype_list . ')'

    ')'  shift, and go to state 97


state 80

   42 non_mt_attrtype_list: attrtype . ',' non_mt_attrtype_list
   43                     | attrtype .

    ','  shift, and go to state 98

    $default  reduce using rule 43 (non_mt_attrtype_list)


state 81

   27 dropindex: T_DROP T_INDEX relation '(' relattr . ')'

    ')'  shift, and go to state 99


state 82

   57 relattr: T_STRING '(' T_STRING ')' .

    $default  reduce using rule 57 (relattr)


state 83

   28 query: T_SELECT non_mt_select_clause T_FROM non_mt_relation_list opt_where_clause .

    $default  reduce using rule 28 (query)


state 84

   29 querygroupsum: T_SELECT non_mt_select_clause T_FROM relation T_GROUP . T_BY non_mt_select_clause opt_where_clause

    T_BY  shift, and go to state 100


state 85

   60 non_mt_relation_list: relation ',' . non_mt_relation_list

    T_STRING  shift, and go to state 48

    non_mt_relation_list  go to state 101
    relation              go to state 102


state 86

   41 list_non_mt_value_list: '(' . non_mt_value_list ')'

    T_NULL     shift, and go to state 103
    T_INT      shift, and go to state 104
    T_REAL     shift, and go to state 105
    T_QSTRING  shift, and go to state 106
    '-'        shift, and go to state 107

    non_mt_value_list  go to state 108
    value              go to state 109


state 87

   30 insert: T_INSERT T_INTO T_STRING T_VALUES list_non_mt_value_list .
   40 list_non_mt_value_list: list_non_mt_value_list . ',' '(' non_mt_value_list ')'

    ','  shift, and go to state 110

    $default  reduce using rule 30 (insert)


state 88

   32 update: T_UPDATE T_STRING T_SET expr_list opt_where_clause .

    $default  reduce using rule 32 (update)


state 89

   33 expr_list: expr ',' . expr_list

    T_STRING  shift, and go to state 38

    expr_list  go to state 111
    expr       go to state 72
    relattr    go to state 73


state 90

   35 expr: relattr T_EQ . relattr_or_value '+' relattr_or_value
   36     | relattr T_EQ . relattr_or_value '-' relattr_or_value
   37     | relattr T_EQ . relattr_or_value '*' relattr_or_value
   38     | relattr T_EQ . relattr_or_value '/' relattr_or_value
   39     | relattr T_EQ . relattr_or_value

    T_NULL     shift, and go to state 103
    T_INT      shift, and go to state 104
    T_REAL     shift, and go to state 105
    T_STRING   shift, and go to state 38
    T_QSTRING  shift, and go to state 106
    '-'        shift, and go to state 107

    relattr           go to state 112
    relattr_or_value  go to state 113
    value             go to state 114


state 91

   67 condition: relattr . op relattr_or_value

    T_LIKE    shift, and go to state 115
    T_EQ      shift, and go to state 116
    T_LT      shift, and go to state 117
    T_LE      shift, and go to state 118
    T_GT      shift, and go to state 119
    T_GE      shift, and go to state 120
    T_NE      shift, and go to state 121
    T_ISNULL  shift, and go to state 122

    op  go to state 123


state 92

   63 opt_where_clause: T_WHERE non_mt_cond_list .

    $default  reduce using rule 63 (opt_where_clause)


state 93

   65 non_mt_cond_list: condition . T_AND non_mt_cond_list
   66                 | condition .

    T_AND  shift, and go to state 124

    $default  reduce using rule 66 (non_mt_cond_list)


state 94

   26 createindex: T_CREATE T_INDEX relation '(' relattr ')' .

    $default  reduce using rule 26 (createindex)


state 95

   47 attrtype: T_STRING T_STRING . T_NOT T_NULL
   48         | T_STRING T_STRING .
   49         | T_STRING T_STRING . '(' T_INT ')'
   50         | T_STRING T_STRING . '(' T_INT ')' T_NOT T_NULL
   51         | T_STRING T_STRING . '(' T_STRING ')'

    T_NOT  shift, and go to state 125
    '('    shift, and go to state 126

    $default  reduce using rule 48 (attrtype)


state 96
